Align Go with Rust guide.