@@ -11,20 +11,26 @@ import org.graalvm.polyglot.Value;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.net.URISyntaxException;
+import java.io.InputStream;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
 
 public class App {
     public static final String GO_MAIN_WASM = "/go/main.wasm";
     public static final String GO_WASM_EXEC = "/go/wasm_exec.js";
 
-    public static void main(String[] args) throws IOException, URISyntaxException {
-        // Fetch Go resources
-        URL mainWasmURL = getResource(GO_MAIN_WASM);
-        byte[] wasmBytes = Files.readAllBytes(Path.of(mainWasmURL.toURI()));
-        URL wasmExecURL = getResource(GO_WASM_EXEC);
+    public static void main(String[] args) throws IOException {
+        // Load Go resources
+        byte[] wasmBytes;
+        try (InputStream in = App.class.getResourceAsStream(GO_MAIN_WASM)) {
+            if (in == null) {
+                throw new FileNotFoundException(GO_MAIN_WASM);
+            }
+            wasmBytes = in.readAllBytes();
+        }
+        URL wasmExecURL = App.class.getResource(GO_WASM_EXEC);
+        if (wasmExecURL == null) {
+            throw new FileNotFoundException(GO_WASM_EXEC);
+        }
         // Create a context with Wasm and JavaScript access
         try (Context context = Context.newBuilder("js", "wasm")
                 .option("js.performance", "true")
@@ -40,25 +46,17 @@ public class App {
             context.eval(Source.newBuilder("js", wasmExecURL).build());
             // Instantiate the Wasm module and invoke go.run()
             context.eval("js", """
-                    async function main(wasmBytes) {
+                    async function run(wasmBytes) {
                         const go = new Go();
                         const {instance} = await WebAssembly.instantiate(new Uint8Array(wasmBytes), go.importObject);
                         go.run(instance);
                     }
-                    main(wasmBytes);
+                    run(wasmBytes);
                     """);
             // Access main module and interact with it through a Java interface
             GoMain goMain = jsBindings.getMember("main").as(GoMain.class);
             System.out.printf("3 + 4 = %s%n", goMain.add(3, 4));
             System.out.printf("reverseString('Hello World') = %s%n", goMain.reverseString("Hello World"));
         }
-    }
-
-    private static URL getResource(String name) throws FileNotFoundException {
-        URL url = App.class.getResource(name);
-        if (url == null) {
-            throw new FileNotFoundException(name);
-        }
-        return url;
     }
 }
